--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,2 @@
-aiohttp==3.6.2
-altgraph==0.16.1
-astroid==2.4.2
-async-timeout==3.0.1
-attrs==19.3.0
-beautifulsoup4==4.9.1
-bs4==0.0.1
-certifi==2020.4.5.2
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.3
-discord.py==1.3.3
-future==0.18.2
-idna==2.9
-isort==4.3.21
-joblib==0.15.1
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-multidict==4.7.6
-nltk==3.5
-pefile==2019.4.18
-Pillow==7.1.2
-pygame==1.9.6
-PyInstaller==3.5
-pylint==2.5.3
-regex==2020.6.8
-requests==2.23.0
-rope==0.17.0
-six==1.15.0
-soupsieve==2.0.1
-textblob==0.15.3
-toml==0.10.1
-tqdm==4.46.1
-typed-ast==1.4.1
-urllib3==1.25.9
-websockets==8.1
-wrapt==1.12.1
-yarl==1.4.2
+discord.py
+asyncio
